Modals, file listing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .my-table-spacing {
+    border-spacing: theme("spacing.5");
+  }
+}
